# MyOrg-Terraform-mcp-server

./: README copy.md  README.md  pyproject.toml
myorg_terraform_mcp_server/: server.py
srini_terraform_mcp_server/: __init__.py
