[project]
name = "myorg-terraform-mcp-server"
version = "0.1.0"
description = "MCP server for discovering and scaffolding Terraform modules from private GitHub repos"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
myorg-terraform-mcp-server = "myorg_terraform_mcp_server.server:main"
